--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -7,6 +7,7 @@
 
 h1 {
   text-align: center;
+  margin-top: 40px;
   font-size: 48px;
   margin-bottom: 20px;
 }
@@ -25,6 +26,8 @@ p {
   background-color: #f9f9f9;
   border: 2px solid #ccc;
   padding: 20px;
+  margin: auto;
+  width: 370px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px #ababab;
 }
